# Portfolio

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  index.html
.fleet/: settings.json
Dockerfiles/: VueServer
Resume/: .gitignore  tom_otero_resume.html
Resume/.backups/: index.html
Resume/.generated/output/: claude.html  claude3-7_first_attempt.html  deepseek.html
Resume/app/: package-lock.json
Resume/app/src/: App.vue  main.js
app/: .gitignore  Profile.csv  README.md  docker-compose.yaml  docker-teamcity_snippet  index 2.html  index.html  package 2.json  package-lock.json  package.json  test.html  tsconfig 2.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
app/.generated/output/: claude3-7.html
app/dev-server/: Dockerfile  entrypoint.sh
app/docs/: typescript-vue-quickref.md
app/images/: mobius-fd-release5.img
app/openvpn-server/: Dockerfile  Dockerfile.in  server.conf
app/public/: init
app/scripts/: build.pl  build.sh
app/src/: App 2.vue  App.vue  env.d.ts  main.ts  vite-env.d.ts
app/src/components/: CatRobot.vue  ContentCard.vue  (+19 more)
app/ssh/: README  authorized_keys
app/vue-server/: Dockerfile  entrypoint 2.sh  entrypoint.sh
app/wrangler/: wrangler_notes.ignore
css/: header.css  main.css
dev-server/: Dockerfile
docs/: Download portfolio_structure_analysis.md  dockerpp_project_spec.md  portfolio_layout_next_steps.txt  vue-guide.md
ops/pyfolio/: README.md  pyproject.toml
ops/pyfolio/src/pyfolio/: __main__.py
ops/pyfolio/src/pyfolio/deploy/: __init__.py  file_transfer.py
vue-server/: Dockerfile
(+52 files in other folders)
